Accordian collapse issue fix, css changes

--- a/src/components/PageLayout/index.scss
+++ b/src/components/PageLayout/index.scss
@@ -40,7 +40,7 @@
   background: rgba(1, 104, 191, 0.07);
   .wrapper {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background: #ffffff;
     border: 0.5px solid #acacac;
     border-radius: 24px;
